--- a/app/globals.css
+++ b/app/globals.css
@@ -8,9 +8,8 @@
     justify-content: center;
     top: 0;
     width: 100%;
-    z-index: 1000;
-    backdrop-filter: blur(10px); /* Adds the blur effect */
-    background-color:white;
+    z-index: 100;
+    background-color: rgba(255, 255, 255, 0.9);
     padding: 2rem; /* Adds padding */
     border-radius: 0px 0px 50% 50%;
     transition: all 0.3s ease; /* Smooth transition */
